# logged

./: Cargo.toml  README.md
src/: error.rs  event.rs  log.rs  main.rs  query.rs  repl.rs  result.rs
src/parser/: grammar.pest  mod.rs
tests/: all.sh  insert.sh
