[package]
name = "logged"
version = "0.1.0"
authors = ["Mathieu D. <mathieu.delacroix.fr@gmail.com>"]
edition = "2021"

[dependencies]
serde = "1.0.117" #
serde_derive = "1.0.117" #
serde_json = "1.0.59" #
clap = "3.1.8" # Build our binary as a cli
regex = "1.3.1" # Because regexp
pest = "2.1.3"
pest_derive = "2.1.0"